--- a/index.html
+++ b/index.html
@@ -1,83 +1,169 @@
-<html>
+<html lang="fr">
+
 <head>
 	<meta charset="UTF-8" />
 	<title>Sebald Pauer</title>
-	<link rel="shortcut icon" type="image/x-icon" href="images/monogramme.jpg" /> <!--Mettre l'icône d'onglet -->
-	<link rel="stylesheet" href="style.css" />
+	<link rel="shortcut icon" type="image/x-icon" href="images/monogramme.jpg" />
+	<!--Mettre l'icône d'onglet -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
 	<div class="wrapper">
 		<div id="pics">
 			<a href="images/id_grandformat.jpg"><img src="images/id_petitformat.jpg"></a>
 		</div>
-		<div id="name"><h1><span class="green">Sebald</span> Pauer</h1><br />
-		<span class="sous_titre">Développeur web junior</span>
+		<div id="name">
+			<h1><span class="green">Sebald</span> Pauer</h1><br />
+			<h3 class="subtitle">Développeur web junior</h3>
 		</div>
 		<aside id="description">
-			<div class="titre">
-				<h2>à propos de moi</h2>
-			</div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis aliquid commodi laborum impedit dolor voluptatibus voluptatem fugit iste. Facere dolorem nisi dignissimos, fuga dolor, quibusdam, magnam ullam aliquam provident nam qui sint quis quidem. Dolorum rerum recusandae nam fugit similique sunt modi maiores dolorem ipsa, ipsum repudiandae neque dolor quae eos doloribus fuga voluptatum iusto dicta consequuntur vero. Aperiam est magni, ex, animi quidem architecto pariatur quibusdam sed esse voluptatem quasi deserunt modi similique deleniti molestias sequi ab nesciunt minima quis commodi nulla exercitationem, maxime doloremque facere! Laborum ad aperiam quis minus, qui quo adipisci quod, quia, itaque totam earum?</p>
+			<h2 class="title_aside">à propos de moi</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis aliquid commodi laborum impedit dolor
+				voluptatibus voluptatem fugit iste. Facere dolorem nisi dignissimos, fuga dolor, quibusdam, magnam ullam
+				aliquam provident nam qui sint quis quidem. Dolorum rerum recusandae nam fugit similique sunt modi
+				maiores dolorem ipsa, ipsum repudiandae neque dolor quae eos doloribus fuga voluptatum iusto dicta
+				consequuntur vero. Aperiam est magni, ex, animi quidem architecto pariatur quibusdam sed esse voluptatem
+				quasi deserunt modi similique deleniti molestias sequi ab nesciunt minima quis commodi nulla
+				exercitationem, maxime doloremque facere! Laborum ad aperiam quis minus, qui quo adipisci quod, quia,
+				itaque totam earum?</p>
 		</aside>
 		<section id="formation">
 			<h2>Formation</h2>
 			<div class="containerA">
-				<div class="date"><p><strong>07/2020 - Aujourd'hui</strong></p></div>
-				<div class="event"><p>OpenClassroom<br />Formation en développement web.</p></div>
-				<div class="date"><p><strong>2018</strong></p></div>
-				<div class="event"><p><strong>Diplôme national d’art (DNA), Arts et langages graphiques, avec mention.</strong><br />École Supérieure d’Art de Lorraine, Metz.</p></div>
-				<div class="date"><p><strong>2015 – 2019</strong></p></div>
-				<div class="event"><p>École Supérieure d’Art de Lorraine, Beaux-Arts, section Communication, Metz.<br /> Niveau M1.</p></div>
-				<div class="date"><p><strong>2014 – 2015</strong></p></div>
-				<div class="event"><p>Classe préparatoire, section Art et architecture, Lycée Saint Jean, Besançon.</p></div>
-				<div class="date"><p><strong>2013 – 2014</strong></p></div>
-				<div class="event"><p><strong>Abibac (Baccalauréat franco-allemand), section Scientifique MP (option art) avec mention.</strong><br />DFG Saarbrücken.</p></div>
-				<div class="date"><p><strong>2010</strong></p></div>
-				<div class="event"><p><strong>Brevet des Collèges.</strong><br />DFG Saarbrücken.</p></div>
-				<div class="date"><p><strong>2008 – 2014</strong></p></div>
-				<div class="event"><p>Lycée franco-allemand de Sarrebruck, DFG Saarbrücken, Deutschland.</p></div>								
+				<div class="date">
+					<p><strong>07/2020 - Aujourd'hui</strong></p>
+				</div>
+				<div class="event">
+					<p>OpenClassroom<br />Formation en développement web.</p>
+				</div>
+				<div class="date">
+					<p><strong>2018</strong></p>
+				</div>
+				<div class="event">
+					<p><strong>Diplôme national d’art (DNA), Arts et langages graphiques, avec
+							mention.</strong><br />École Supérieure d’Art de Lorraine, Metz.</p>
+				</div>
+				<div class="date">
+					<p><strong>2015 – 2019</strong></p>
+				</div>
+				<div class="event">
+					<p>École Supérieure d’Art de Lorraine, Beaux-Arts, section Communication, Metz.<br /> Niveau M1.</p>
+				</div>
+				<div class="date">
+					<p><strong>2014 – 2015</strong></p>
+				</div>
+				<div class="event">
+					<p>Classe préparatoire, section Art et architecture, Lycée Saint Jean, Besançon.</p>
+				</div>
+				<div class="date">
+					<p><strong>2013 – 2014</strong></p>
+				</div>
+				<div class="event">
+					<p><strong>Abibac (Baccalauréat franco-allemand), section Scientifique MP (option art) avec
+							mention.</strong><br />DFG Saarbrücken.</p>
+				</div>
+				<div class="date">
+					<p><strong>2010</strong></p>
+				</div>
+				<div class="event">
+					<p><strong>Brevet des Collèges.</strong><br />DFG Saarbrücken.</p>
+				</div>
+				<div class="date">
+					<p><strong>2008 – 2014</strong></p>
+				</div>
+				<div class="event">
+					<p>Lycée franco-allemand de Sarrebruck, DFG Saarbrücken, Deutschland.</p>
+				</div>
 			</div>
 		</section>
 		<section id="experiences">
 			<h2>Expérience professionnelle</h2>
 			<div class="containerA">
-				<div class="date"><p><strong>10/2019 - Aujourd'hui</strong></p></div>
-				<div class="event"><p>Auchan, Saint Jacques, Metz (57).<br />Mise en rayon et permanence.</p></div>
-				<div class="date"><p><strong>04/2019 – 05/2019</strong></p></div>
-				<div class="event"><p>Lézard Graphique, Brumath (67).<br />Stage de deux mois, manutention en sérigraphie industrielle.</p></div>
-				<div class="date"><p><strong>02/2019</strong></p></div>
-				<div class="event"><p>Médiathèque, École Supérieure d’Art de Lorraine, Metz (57).<br />Réarrangement de l’espace, classement des livres.</p></div>
-				<div class="date"><p><strong>06/2018 – 02/2019</strong></p></div>
-				<div class="event"><p>Burger King, Metz Technopole (57).<br />Caissier, cuisinier et technicien de surface.</p></div>
-				<div class="date"><p><strong>07/2017 – 09/2017</strong></p></div>
-				<div class="event"><p>Mirabelle TV, Woippy (57).<br />Habillage graphique et multimédia de la chaine (huitième saison), programmation des animations sur Adobe After Effects.</p></div>
-				<div class="date"><p><strong>07/2016 – 08/2016<br />06/2014 – 08/2014<br />07/2013 – 08/2013<br />07/2012 – 08/2012</strong></p></div>
-				<div class="event"><p>Schulbuchausleihe, DFG Saarbrücken, Deutschland.<br />Prêt des livres scolaires:<br />4ème année: encadrement et vérification des livres pour l’année 2016/2017, contrôle du budget.<br />3ème année: encadrement et vérification des livres pour l’année 2014/2015.<br />2ème année: réception et préparation des livres pour l’année 2013/2014.<br />Jeune recrue: réception et préparation des livres pour l’année 2012/2013.</p></div>
-				<div class="date"><p><strong>07/2011 – 08/2011</strong></p></div>
-				<div class="event"><p>Premec, Morhange (57).<br />Travaux de maintenance, gravure sur métal (programmation), assistance.</p></div>
-				<div class="date"><p><strong>05/2010</strong></p></div>
-				<div class="event"><p>Allgaier GmbH, Uhingen, Deutschland.<br />Stage d’un mois en entreprise automobile.</p></div>
+				<div class="date">
+					<p><strong>10/2019 - Aujourd'hui</strong></p>
+				</div>
+				<div class="event">
+					<p>Auchan, Saint Jacques, Metz (57).<br />Mise en rayon et permanence.</p>
+				</div>
+				<div class="date">
+					<p><strong>04/2019 – 05/2019</strong></p>
+				</div>
+				<div class="event">
+					<p>Lézard Graphique, Brumath (67).<br />Stage de deux mois, manutention en sérigraphie industrielle.
+					</p>
+				</div>
+				<div class="date">
+					<p><strong>02/2019</strong></p>
+				</div>
+				<div class="event">
+					<p>Médiathèque, École Supérieure d’Art de Lorraine, Metz (57).<br />Réarrangement de l’espace,
+						classement des livres.</p>
+				</div>
+				<div class="date">
+					<p><strong>06/2018 – 02/2019</strong></p>
+				</div>
+				<div class="event">
+					<p>Burger King, Metz Technopole (57).<br />Caissier, cuisinier et technicien de surface.</p>
+				</div>
+				<div class="date">
+					<p><strong>07/2017 – 09/2017</strong></p>
+				</div>
+				<div class="event">
+					<p>Mirabelle TV, Woippy (57).<br />Habillage graphique et multimédia de la chaine (huitième saison),
+						programmation des animations sur Adobe After Effects.</p>
+				</div>
+				<div class="date">
+					<p><strong>07/2016 – 08/2016<br />06/2014 – 08/2014<br />07/2013 – 08/2013<br />07/2012 –
+							08/2012</strong></p>
+				</div>
+				<div class="event">
+					<p>Schulbuchausleihe, DFG Saarbrücken, Deutschland.<br />Prêt des livres scolaires:<br />4ème année:
+						encadrement et vérification des livres pour l’année 2016/2017, contrôle du budget.<br />3ème
+						année: encadrement et vérification des livres pour l’année 2014/2015.<br />2ème année: réception
+						et préparation des livres pour l’année 2013/2014.<br />Jeune recrue: réception et préparation
+						des livres pour l’année 2012/2013.</p>
+				</div>
+				<div class="date">
+					<p><strong>07/2011 – 08/2011</strong></p>
+				</div>
+				<div class="event">
+					<p>Premec, Morhange (57).<br />Travaux de maintenance, gravure sur métal (programmation),
+						assistance.</p>
+				</div>
+				<div class="date">
+					<p><strong>05/2010</strong></p>
+				</div>
+				<div class="event">
+					<p>Allgaier GmbH, Uhingen, Deutschland.<br />Stage d’un mois en entreprise automobile.</p>
+				</div>
 			</div>
 		</section>
 		<section id="recommandation">
-			<h2 style="text-transform: uppercase;">Recommandations</h2>
+			<h2>Recommandations</h2>
 			<div class="containerB">
-				<div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus eos ab commodi consequatur nesciunt sit necessitatibus accusamus magni! Quis inventore provident, fugit voluptatum dolor velit accusantium ipsa ducimus fugiat molestias.</div>
-				<div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, incidunt veritatis facilis ullam nobis consequatur dolores at provident. Voluptatum natus est obcaecati repudiandae eius beatae veritatis quasi facilis, necessitatibus libero?</div>
+				<div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus eos ab commodi consequatur
+					nesciunt sit necessitatibus accusamus magni! Quis inventore provident, fugit voluptatum dolor velit
+					accusantium ipsa ducimus fugiat molestias.</div>
+				<div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, incidunt veritatis facilis ullam
+					nobis consequatur dolores at provident. Voluptatum natus est obcaecati repudiandae eius beatae
+					veritatis quasi facilis, necessitatibus libero?</div>
 			</div>
 		</section>
 		<aside id="hobbies">
-			<div class="titre">
-				<h2 style="text-transform: uppercase;">Loisirs</h2>
-			</div>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolor sapiente exercitationem doloribus provident quibusdam autem voluptate officiis sunt tempora placeat error consectetur eius eveniet labore molestias, vel neque nostrum.</p>
+			<h2 class="title_aside">Loisirs</h2>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolor sapiente exercitationem doloribus
+				provident quibusdam autem voluptate officiis sunt tempora placeat error consectetur eius eveniet labore
+				molestias, vel neque nostrum.</p>
 		</aside>
 		<footer id="contact">
-			<div class="titre">
-				<h2 style="text-transform: uppercase;">Contact</h2>
-			</div>
-			<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia pariatur facilis nostrum, excepturi doloribus ducimus tempore voluptas qui fugiat nam beatae nihil, reprehenderit, cum veritatis itaque neque placeat quia rem?</p>
+			<h2 class="title_aside">Contact</h2>
+			<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia pariatur facilis nostrum, excepturi
+				doloribus ducimus tempore voluptas qui fugiat nam beatae nihil, reprehenderit, cum veritatis itaque
+				neque placeat quia rem?</p>
 		</footer>
 	</div>
 </body>
+
 </html>
