--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Sebald Pauer</title>
-	<link rel="shortcut icon" type="image/x-icon" href="images/monogramme.jpg" />
-	<!--Mettre l'icône d'onglet -->
+	<link rel="shortcut icon" type="image/x-icon" href="images/monogramme.jpg" /> <!--Mettre l'icône d'onglet -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" type="text/css" media="handheld" href="css/smallscreen.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 			<a href="images/id_grandformat.jpg"><img src="images/id_petitformat.jpg"></a>
 		</div>
 		<div id="name">
-			<h1><span class="green">Sebald</span> Pauer</h1><br />
+			<h1><span class="title_green">Sebald</span><span class="title_grey"> Pauer</span></h1><br />
 			<h3 class="subtitle">Développeur web junior</h3>
 		</div>
 		<aside id="description">
@@ -159,9 +159,12 @@
 		</aside>
 		<footer id="contact">
 			<h2 class="title_aside">Contact</h2>
-			<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia pariatur facilis nostrum, excepturi
-				doloribus ducimus tempore voluptas qui fugiat nam beatae nihil, reprehenderit, cum veritatis itaque
-				neque placeat quia rem?</p>
+			<p><strong>Téléphone:</strong><br />
+				+33 (0)7.82.78.20.18</p><br />
+			<p id="mail"><strong>E-Mail:</strong><br />
+				<a href="mailto:pauer.sebald@gmail.com" class="link">pauer.sebald@gmail.com</a></p><br />
+			<p id="adress"><strong>Adresse postale:</strong><br />
+			<a href="https://www.google.com/maps/place/15+Rue+du+Pont+Saint-Marcel,+57000+Metz/data=!4m2!3m1!1s0x4794deaa2ce6dbb3:0xc3a395a631b7eec7?sa=X&ved=2ahUKEwjQjZ7H2NTqAhXBA2MBHa9fBZMQ8gEwAHoECAwQAQ" target="_blank" class="link">15, rue du Pont Saint Marcel F-57000 Metz</a></p>
 		</footer>
 	</div>
 </body>
