--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="wrapper">
 		<div id="pics">
-			<a href="images/id_grandformat.jpg"><img src="images/id_petitformat.jpg"></a>
+			<a href="images/id_grandformat.jpg"><img src="images/id_petitformat.jpg" class="id_pic"></a>
 		</div>
 		<div id="name">
 			<h1><span class="title_green">Sebald</span><span class="title_grey"> Pauer</span></h1><br />
@@ -33,45 +33,45 @@
 			<h2>Formation</h2>
 			<div class="containerA">
 				<div class="date">
-					<p><strong>07/2020 - Aujourd'hui</strong></p>
+					<p>07/2020 – Aujourd'hui</p>
 				</div>
 				<div class="event">
 					<p>OpenClassroom<br />Formation en développement web.</p>
 				</div>
 				<div class="date">
-					<p><strong>2018</strong></p>
+					<p>2018</p>
 				</div>
 				<div class="event">
-					<p><strong>Diplôme national d’art (DNA), Arts et langages graphiques, avec
-							mention.</strong><br />École Supérieure d’Art de Lorraine, Metz.</p>
+					<p>Diplôme national d’art (DNA), Arts et langages graphiques, avec
+							mention.<br />École Supérieure d’Art de Lorraine, Metz.</p>
 				</div>
 				<div class="date">
-					<p><strong>2015 – 2019</strong></p>
+					<p>2015 – 2019</p>
 				</div>
 				<div class="event">
 					<p>École Supérieure d’Art de Lorraine, Beaux-Arts, section Communication, Metz.<br /> Niveau M1.</p>
 				</div>
 				<div class="date">
-					<p><strong>2014 – 2015</strong></p>
+					<p>2014 – 2015</p>
 				</div>
 				<div class="event">
 					<p>Classe préparatoire, section Art et architecture, Lycée Saint Jean, Besançon.</p>
 				</div>
 				<div class="date">
-					<p><strong>2013 – 2014</strong></p>
+					<p>2013 – 2014</p>
 				</div>
 				<div class="event">
-					<p><strong>Abibac (Baccalauréat franco-allemand), section Scientifique MP (option art) avec
-							mention.</strong><br />DFG Saarbrücken.</p>
+					<p>Abibac (Baccalauréat franco-allemand), section Scientifique MP (option art) avec
+							mention.<br />DFG Saarbrücken.</p>
 				</div>
 				<div class="date">
-					<p><strong>2010</strong></p>
+					<p>2010</p>
 				</div>
 				<div class="event">
-					<p><strong>Brevet des Collèges.</strong><br />DFG Saarbrücken.</p>
+					<p>Brevet des Collèges.<br />DFG Saarbrücken.</p>
 				</div>
 				<div class="date">
-					<p><strong>2008 – 2014</strong></p>
+					<p>2008 – 2014</p>
 				</div>
 				<div class="event">
 					<p>Lycée franco-allemand de Sarrebruck, DFG Saarbrücken, Deutschland.</p>
@@ -82,41 +82,41 @@
 			<h2>Expérience professionnelle</h2>
 			<div class="containerA">
 				<div class="date">
-					<p><strong>10/2019 - Aujourd'hui</strong></p>
+					<p>10/2019 – Aujourd'hui</p>
 				</div>
 				<div class="event">
 					<p>Auchan, Saint Jacques, Metz (57).<br />Mise en rayon et permanence.</p>
 				</div>
 				<div class="date">
-					<p><strong>04/2019 – 05/2019</strong></p>
+					<p>04/2019 – 05/2019</p>
 				</div>
 				<div class="event">
 					<p>Lézard Graphique, Brumath (67).<br />Stage de deux mois, manutention en sérigraphie industrielle.
 					</p>
 				</div>
 				<div class="date">
-					<p><strong>02/2019</strong></p>
+					<p>02/2019</p>
 				</div>
 				<div class="event">
 					<p>Médiathèque, École Supérieure d’Art de Lorraine, Metz (57).<br />Réarrangement de l’espace,
 						classement des livres.</p>
 				</div>
 				<div class="date">
-					<p><strong>06/2018 – 02/2019</strong></p>
+					<p>06/2018 – 02/2019</p>
 				</div>
 				<div class="event">
 					<p>Burger King, Metz Technopole (57).<br />Caissier, cuisinier et technicien de surface.</p>
 				</div>
 				<div class="date">
-					<p><strong>07/2017 – 09/2017</strong></p>
+					<p>07/2017 – 09/2017</p>
 				</div>
 				<div class="event">
 					<p>Mirabelle TV, Woippy (57).<br />Habillage graphique et multimédia de la chaine (huitième saison),
 						programmation des animations sur Adobe After Effects.</p>
 				</div>
 				<div class="date">
-					<p><strong>07/2016 – 08/2016<br />06/2014 – 08/2014<br />07/2013 – 08/2013<br />07/2012 –
-							08/2012</strong></p>
+					<p>07/2016 – 08/2016<br />06/2014 – 08/2014<br />07/2013 – 08/2013<br />07/2012 –
+							08/2012</p>
 				</div>
 				<div class="event">
 					<p>Schulbuchausleihe, DFG Saarbrücken, Deutschland.<br />Prêt des livres scolaires:<br />4ème année:
@@ -126,14 +126,14 @@
 						des livres pour l’année 2012/2013.</p>
 				</div>
 				<div class="date">
-					<p><strong>07/2011 – 08/2011</strong></p>
+					<p>07/2011 – 08/2011</p>
 				</div>
 				<div class="event">
 					<p>Premec, Morhange (57).<br />Travaux de maintenance, gravure sur métal (programmation),
 						assistance.</p>
 				</div>
 				<div class="date">
-					<p><strong>05/2010</strong></p>
+					<p>05/2010</p>
 				</div>
 				<div class="event">
 					<p>Allgaier GmbH, Uhingen, Deutschland.<br />Stage d’un mois en entreprise automobile.</p>
@@ -159,11 +159,11 @@
 		</aside>
 		<footer id="contact">
 			<h2 class="title_aside">Contact</h2>
-			<p><strong>Téléphone:</strong><br />
-				+33 (0)7.82.78.20.18</p><br />
-			<p id="mail"><strong>E-Mail:</strong><br />
-				<a href="mailto:pauer.sebald@gmail.com" class="link">pauer.sebald@gmail.com</a></p><br />
-			<p id="adress"><strong>Adresse postale:</strong><br />
+			<p>Téléphone:<br />
+				+33 (0)7.82.78.20.18</p>
+			<p id="mail">E-Mail:<br />
+				<a href="mailto:pauer.sebald@gmail.com" class="link">pauer.sebald@gmail.com</a></p>
+			<p id="adress">Adresse postale:<br />
 			<a href="https://www.google.com/maps/place/15+Rue+du+Pont+Saint-Marcel,+57000+Metz/data=!4m2!3m1!1s0x4794deaa2ce6dbb3:0xc3a395a631b7eec7?sa=X&ved=2ahUKEwjQjZ7H2NTqAhXBA2MBHa9fBZMQ8gEwAHoECAwQAQ" target="_blank" class="link">15, rue du Pont Saint Marcel F-57000 Metz</a></p>
 		</footer>
 	</div>
