--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Sebald Pauer</title>
+	<title>CurryV - Sebald Pauer</title>
 	<link rel="shortcut icon" type="image/x-icon" href="images/monogramme.jpg" /> <!--Mettre l'icône d'onglet -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" type="text/css" media="handheld" href="css/smallscreen.css">
+	<meta property="og:title" content="CurryV - Sebald Pauer" />
+	<meta property="og:type" content="Curriculum Vitae" />
+	<meta property="og:url" content="https://sebaldp.github.io/CurryV/" />
+	<meta property="og:image" content="https://sebaldp.github.io/CurryV/images/id_grandformat.jpg" />
+	<meta property="og:description" content="Il s'agit de me présenter et d'y ajouter quelques épices..." />
+	<meta property="og:site_name" content="CurryV - Sebald Pauer" />
 </head>
 
 <body>
