--- a/index.html
+++ b/index.html
@@ -66,16 +66,26 @@
 					C3,11,3.1,11.3,3.3,11.6c0.9,1.1,2.8,1.8,5,1.8c1.5,0,2.8-0.3,3.8-0.9c0.5-0.3,0.9-0.6,1.2-1c0.3-0.4,0.5-0.8,0.5-1.3c0,0,0,0,0-0.1
 					V8.4z"/>
 				</svg>
-				<h2>Formation</h2>
+				<h2 id="formation_title">Formation</h2>
 			</div>
 			<div class="containerA">
 				<div class="date">
+					<svg version="1.1" class="double_point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+						<g id="double_point__element">
+							<path d="M2.7,1.7c-0.5,0-0.9,0.4-0.9,0.9c0,0.5,0.4,0.9,0.9,0.9s0.9-0.4,0.9-0.9C3.6,2.2,3.2,1.7,2.7,1.7z"/>
+							<path d="M2.7,0C1.2,0,0,1.2,0,2.7c0,1.5,1.2,2.7,2.7,2.7c1.5,0,2.7-1.2,2.7-2.7C5.3,1.2,4.1,0,2.7,0z M2.7,4.6
+								c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9c1.1,0,1.9,0.9,1.9,1.9C4.6,3.7,3.7,4.6,2.7,4.6z"/>
+						</g>
+					</svg>
 					<p>07/2020 – Aujourd'hui</p>
 				</div>
 				<div class="event">
 					<p>OpenClassroom<br />Formation en développement web.</p>
 				</div>
 				<div class="date">
+					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+						<circle cx="2.7" cy="2.7" r="1.7"/>
+					</svg>
 					<p>2018</p>
 				</div>
 				<div class="event">
@@ -83,18 +93,27 @@
 							mention.<br />École Supérieure d’Art de Lorraine, Metz.</p>
 				</div>
 				<div class="date">
+					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+						<circle cx="2.7" cy="2.7" r="1.7"/>
+					</svg>
 					<p>2015 – 2019</p>
 				</div>
 				<div class="event">
 					<p>École Supérieure d’Art de Lorraine, Beaux-Arts, section Communication, Metz.<br /> Niveau M1.</p>
 				</div>
 				<div class="date">
+					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+						<circle cx="2.7" cy="2.7" r="1.7"/>
+					</svg>
 					<p>2014 – 2015</p>
 				</div>
 				<div class="event">
 					<p>Classe préparatoire, section Art et architecture, Lycée Saint Jean, Besançon.</p>
 				</div>
 				<div class="date">
+					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+						<circle cx="2.7" cy="2.7" r="1.7"/>
+					</svg>
 					<p>2013 – 2014</p>
 				</div>
 				<div class="event">
@@ -102,12 +121,18 @@
 							mention.<br />DFG Saarbrücken.</p>
 				</div>
 				<div class="date">
+					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+						<circle cx="2.7" cy="2.7" r="1.7"/>
+					</svg>
 					<p>2010</p>
 				</div>
 				<div class="event">
 					<p>Brevet des Collèges.<br />DFG Saarbrücken.</p>
 				</div>
 				<div class="date">
+					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+						<circle cx="2.7" cy="2.7" r="1.7"/>
+					</svg>
 					<p>2008 – 2014</p>
 				</div>
 				<div class="event">
@@ -129,16 +154,26 @@
 						H9.8C9.5,7.8,9.1,7.5,8.5,7.5H8.2c-0.5,0-1,0.3-1.2,0.8H1.8V5.5c0-0.3,0.3-0.6,0.6-0.6h11.9c0.3,0,0.6,0.3,0.6,0.6V8.3z"/>
 					</g>
 				</svg>
-				<h2>Expérience professionnelle</h2>
+				<h2 id="experiences_title">Expérience professionnelle</h2>
 			</div>
 			<div class="containerA">
 				<div class="date">
+					<svg version="1.1" class="double_point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+						<g id="double_point__element">
+							<path d="M2.7,1.7c-0.5,0-0.9,0.4-0.9,0.9c0,0.5,0.4,0.9,0.9,0.9s0.9-0.4,0.9-0.9C3.6,2.2,3.2,1.7,2.7,1.7z"/>
+							<path d="M2.7,0C1.2,0,0,1.2,0,2.7c0,1.5,1.2,2.7,2.7,2.7c1.5,0,2.7-1.2,2.7-2.7C5.3,1.2,4.1,0,2.7,0z M2.7,4.6
+								c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9c1.1,0,1.9,0.9,1.9,1.9C4.6,3.7,3.7,4.6,2.7,4.6z"/>
+						</g>
+					</svg>
 					<p>10/2019 – Aujourd'hui</p>
 				</div>
 				<div class="event">
 					<p>Auchan, Saint Jacques, Metz (57).<br />Mise en rayon et permanence.</p>
 				</div>
 				<div class="date">
+					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+						<circle cx="2.7" cy="2.7" r="1.7"/>
+					</svg>
 					<p>04/2019 – 05/2019</p>
 				</div>
 				<div class="event">
@@ -146,6 +181,9 @@
 					</p>
 				</div>
 				<div class="date">
+					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+						<circle cx="2.7" cy="2.7" r="1.7"/>
+					</svg>
 					<p>02/2019</p>
 				</div>
 				<div class="event">
@@ -153,12 +191,18 @@
 						classement des livres.</p>
 				</div>
 				<div class="date">
+					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+						<circle cx="2.7" cy="2.7" r="1.7"/>
+					</svg>
 					<p>06/2018 – 02/2019</p>
 				</div>
 				<div class="event">
 					<p>Burger King, Metz Technopole (57).<br />Caissier, cuisinier et technicien de surface.</p>
 				</div>
 				<div class="date">
+					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+						<circle cx="2.7" cy="2.7" r="1.7"/>
+					</svg>
 					<p>07/2017 – 09/2017</p>
 				</div>
 				<div class="event">
@@ -166,6 +210,9 @@
 						programmation des animations sur Adobe After Effects.</p>
 				</div>
 				<div class="date">
+					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+						<circle cx="2.7" cy="2.7" r="1.7"/>
+					</svg>
 					<p>07/2016 – 08/2016<br />06/2014 – 08/2014<br />07/2013 – 08/2013<br />07/2012 – 08/2012</p>
 				</div>
 				<div class="event">
@@ -176,6 +223,9 @@
 						des livres pour l’année 2012/2013.</p>
 				</div>
 				<div class="date">
+					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+						<circle cx="2.7" cy="2.7" r="1.7"/>
+					</svg>
 					<p>07/2011 – 08/2011</p>
 				</div>
 				<div class="event">
@@ -183,6 +233,9 @@
 						assistance.</p>
 				</div>
 				<div class="date">
+					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
+						<circle cx="2.7" cy="2.7" r="1.7"/>
+					</svg>
 					<p>05/2010</p>
 				</div>
 				<div class="event">
@@ -202,7 +255,7 @@
 					l-2.5,0.5C2.2,15.3,2,15.1,1.8,15L2.5,12.4z M13.9,5.9l-2.6-2.3l0.3-0.3l1.1,1l0,0l1.5,1.4L13.9,5.9z M14.8,5l-2.5-2.2
 					c0.3-0.2,0.6-0.3,0.9-0.3c1,0,1.8,0.8,1.8,1.8C15,4.5,14.9,4.7,14.8,5z"/>
 				</svg>
-				<h2>Recommandations</h2>
+				<h2 id="recommandation_title">Recommandations</h2>
 			</div>
 			<div class="containerB">
 				<div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus eos ab commodi consequatur
