--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<link rel="stylesheet" type="text/css" media="handheld" href="css/smallscreen.css">
+	<link rel="stylesheet" type="text/css" media="print" href="css/print.css">
 	<meta property="og:title" content="CurryV - Sebald Pauer" />
 	<meta property="og:type" content="Curriculum Vitae" />
 	<meta property="og:url" content="https://sebaldp.github.io/CurryV/" />
