--- a/index.html
+++ b/index.html
@@ -390,6 +390,10 @@
 			</div>
 		</footer>
 	</div>
+	<div id="fullscreen-video-bg">
+		<video src="video/Binary_numbers_alpha_overlay_01_Videvo.webm" autoplay="true" loop="true"></video>
+	</div>
+	<div id="fullscreen-video-bg--overlay"></div>
 </body>
 
 </html>
