--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<link rel="stylesheet" type="text/css" media="handheld" href="css/smallscreen.css">
+	<link rel="stylesheet" type="text/css" media="handheld" href="css/smallscreen--style.css" />
 	<link rel="stylesheet" type="text/css" media="print" href="css/print.css">
 	<meta property="og:title" content="CurryV - Sebald Pauer" />
 	<meta property="og:type" content="Curriculum Vitae" />
@@ -19,8 +20,8 @@
 
 <body>
 	<div class="wrapper">
-		<div id="id">
-			<a href="images/id_grandformat.jpg"><img src="images/id_petitformat.jpg" class="id__pic"></a>
+		<div id="pic">
+			<a href="images/id_grandformat.jpg"><img src="images/id_petitformat.jpg" class="pic__element"></a>
 		</div>
 		<div id="name">
 			<h1><span class="name--green">Sebald</span><span class="name--grey"> Pauer</span></h1>
@@ -78,66 +79,65 @@
 								c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9c1.1,0,1.9,0.9,1.9,1.9C4.6,3.7,3.7,4.6,2.7,4.6z"/>
 						</g>
 					</svg>
-					<p>07/2020 – Aujourd'hui</p>
+					<p>07/2020 – Aujourd'hui<br />Metz</p>
 				</div>
 				<div class="event">
-					<p>OpenClassroom<br />Formation en développement web.</p>
+					<p><span class="event--place">OpenClassroom</span><br /><span class="event--workplace">Développeur web junior</span><br />Frontend (et Backend)</p>
 				</div>
 				<div class="date">
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
-					<p>2018</p>
+					<p>2018<br />Metz</p>
 				</div>
 				<div class="event">
-					<p>Diplôme national d’art (DNA), Arts et langages graphiques, avec
-							mention.<br />École Supérieure d’Art de Lorraine, Metz.</p>
+					<p><span class="event--place">Diplôme national d’art (DNA)</span><br /><span class="event--workplace">Arts et langages graphiques, avec
+							mention</span><br />École Supérieure d’Art de Lorraine</p>
 				</div>
 				<div class="date">
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
-					<p>2015 – 2019</p>
+					<p>2015 – 2019<br />Metz</p>
 				</div>
 				<div class="event">
-					<p>École Supérieure d’Art de Lorraine, Beaux-Arts, section Communication, Metz.<br /> Niveau M1.</p>
+					<p><span class="event--place">École Supérieure d’Art de Lorraine</span><br /><span class="event--workplace">Section communication</span><br />Niveau M1</p>
 				</div>
 				<div class="date">
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
-					<p>2014 – 2015</p>
+					<p>2014 – 2015<br />Besançon</p>
 				</div>
 				<div class="event">
-					<p>Classe préparatoire, section Art et architecture, Lycée Saint Jean, Besançon.</p>
+					<p><span class="event--place">Lycée Saint Jean</span><br /><span class="event--workplace">Classe préparatoire, section Art et architecture</span></p>
 				</div>
 				<div class="date">
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
-					<p>2013 – 2014</p>
+					<p>2013 – 2014<br />Saarbrücken, Allemagne</p>
 				</div>
 				<div class="event">
-					<p>Abibac (Baccalauréat franco-allemand), section Scientifique MP (option art) avec
-							mention.<br />DFG Saarbrücken.</p>
+					<p><span class="event--place">Abibac (Baccalauréat franco-allemand)</span><br /><span class="event--workplace"></span>Section Scientifique MP (option art) avec mention</span><br />DFG Saarbrücken</p>
 				</div>
 				<div class="date">
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
-					<p>2010</p>
+					<p>2010<br />Saarbrücken, Allemagne</p>
 				</div>
 				<div class="event">
-					<p>Brevet des Collèges.<br />DFG Saarbrücken.</p>
+					<p>Brevet des Collèges<br />DFG Saarbrücken</p>
 				</div>
 				<div class="date">
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
-					<p>2008 – 2014</p>
+					<p>2008 – 2014<br />Saarbrücken, Allemagne</p>
 				</div>
 				<div class="event">
-					<p>Lycée franco-allemand de Sarrebruck, DFG Saarbrücken, Deutschland.</p>
+					<span class="event--place">Lycée franco-allemand de Sarrebruck,<br />Deutsch Französisches Gymnasium Saarbrücken</span>
 				</div>
 			</div>
 		</section>
@@ -166,58 +166,58 @@
 								c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9c1.1,0,1.9,0.9,1.9,1.9C4.6,3.7,3.7,4.6,2.7,4.6z"/>
 						</g>
 					</svg>
-					<p>10/2019 – Aujourd'hui</p>
+					<p>10/2019 – Poste actuel<br />Metz</p>
 				</div>
 				<div class="event">
-					<p>Auchan, Saint Jacques, Metz (57).<br />Mise en rayon et permanence.</p>
+					<p><span class="event--place">Auchan, Saint Jacques</span><br /><span class="event--workplace">Employé polyvalent</span><br />Mise en rayon et permanence.</p>
 				</div>
 				<div class="date">
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
-					<p>04/2019 – 05/2019</p>
+					<p>04/2019 – 05/2019<br />Brumath</p>
 				</div>
 				<div class="event">
-					<p>Lézard Graphique, Brumath (67).<br />Stage de deux mois, manutention en sérigraphie industrielle.
+					<p><span class="event--place">Lézard Graphique</span><br /><span class="event--workplace">Stagiaire polyvalent</span><br />Stage de deux mois, manutention en sérigraphie industrielle.
 					</p>
 				</div>
 				<div class="date">
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
-					<p>02/2019</p>
+					<p>02/2019<br />Metz</p>
 				</div>
 				<div class="event">
-					<p>Médiathèque, École Supérieure d’Art de Lorraine, Metz (57).<br />Réarrangement de l’espace,
+					<p><span class="event--place">Médiathèque, École Supérieure d’Art de Lorraine</span><br /><span class="event--workplace">Employé polyvalent</span><br />Réarrangement de l’espace,
 						classement des livres.</p>
 				</div>
 				<div class="date">
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
-					<p>06/2018 – 02/2019</p>
+					<p>06/2018 – 02/2019<br />Metz</p>
 				</div>
 				<div class="event">
-					<p>Burger King, Metz Technopole (57).<br />Caissier, cuisinier et technicien de surface.</p>
+					<p><span class="event--place">Burger King, Metz Technopole</span><br /><span class="event--workplace">Employé polyvalent</span><br />Caissier, cuisinier et technicien de surface.</p>
 				</div>
 				<div class="date">
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
-					<p>07/2017 – 09/2017</p>
+					<p>07/2017 – 09/2017<br />Woippy</p>
 				</div>
 				<div class="event">
-					<p>Mirabelle TV, Woippy (57).<br />Habillage graphique et multimédia de la chaine (huitième saison),
+					<p><span class="event--place">Mirabelle TV</span><br /><span class="event--workplace">Directeur artistique et designer graphique</span><br />Habillage graphique et multimédia de la chaine (huitième saison),
 						programmation des animations sur Adobe After Effects.</p>
 				</div>
 				<div class="date">
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
-					<p>07/2016 – 08/2016<br />06/2014 – 08/2014<br />07/2013 – 08/2013<br />07/2012 – 08/2012</p>
+					<p>07/2016 – 08/2016<br />06/2014 – 08/2014<br />07/2013 – 08/2013<br />07/2012 – 08/2012<br />Saarbrücken, Allemagne</p>
 				</div>
 				<div class="event">
-					<p>Schulbuchausleihe, DFG Saarbrücken, Deutschland.<br />Prêt des livres scolaires:<br />4ème année:
+					<p><span class="event--place">Schulbuchausleihe, DFG Saarbrücken</span><br /><span class="event--workplace">Employé polyvalent</span><br />Prêt des livres scolaires:<br />4ème année:
 						encadrement et vérification des livres pour l’année 2016/2017, contrôle du budget.<br />3ème
 						année: encadrement et vérification des livres pour l’année 2014/2015.<br />2ème année: réception
 						et préparation des livres pour l’année 2013/2014.<br />Jeune recrue: réception et préparation
@@ -227,24 +227,24 @@
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
-					<p>07/2011 – 08/2011</p>
+					<p>07/2011 – 08/2011<br />Morhange</p>
 				</div>
 				<div class="event">
-					<p>Premec, Morhange (57).<br />Travaux de maintenance, gravure sur métal (programmation),
+					<p><span class="event--place">Premec</span><br /><span class="event--workplace">Employé polyvalent</span><br />Travaux de maintenance, gravure sur métal (programmation),
 						assistance.</p>
 				</div>
 				<div class="date">
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
-					<p>05/2010</p>
+					<p>05/2010<br />Uhingen, Deutschland</p>
 				</div>
 				<div class="event">
-					<p>Allgaier GmbH, Uhingen, Deutschland.<br />Stage d’un mois en entreprise automobile.</p>
+					<p><span class="event--place">Allgaier GmbH</span><br /><span class="event--workplace">Stagiaire polyvalent</span><br />Stage d’un mois en entreprise automobile.</p>
 				</div>
 			</div>
 		</section>
-		<section id="recommandation">
+		<section id="recommandations">
 			<div class="title_section">
 				<svg version="1.1" id="pen" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16.6 16.6" style="enable-background:new 0 0 16.6 16.6;" xml:space="preserve">
 					<polygon id="pen__background" points="1.2,15.7 2.3,11.9 5.8,8.3 11.6,2.8 13.1,2 14.5,2.5 15.4,3.7 
@@ -256,7 +256,7 @@
 					l-2.5,0.5C2.2,15.3,2,15.1,1.8,15L2.5,12.4z M13.9,5.9l-2.6-2.3l0.3-0.3l1.1,1l0,0l1.5,1.4L13.9,5.9z M14.8,5l-2.5-2.2
 					c0.3-0.2,0.6-0.3,0.9-0.3c1,0,1.8,0.8,1.8,1.8C15,4.5,14.9,4.7,14.8,5z"/>
 				</svg>
-				<h2 id="recommandation_title">Recommandations</h2>
+				<h2 id="recommandations_title">Recommandations</h2>
 			</div>
 			<div class="containerB">
 				<div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus eos ab commodi consequatur
@@ -383,9 +383,9 @@
 				<p id="contact__mail">E-Mail:<br />
 					<a href="mailto:pauer.sebald@gmail.com" class="contact__mail--link">pauer.sebald@gmail.com</a></p>
 				<p id="contact__adress">Adresse postale:<br />
-				<a href="https://www.google.com/maps/place/15+Rue+du+Pont+Saint-Marcel,+57000+Metz/data=!4m2!3m1!1s0x4794deaa2ce6dbb3:0xc3a395a631b7eec7?sa=X&ved=2ahUKEwjQjZ7H2NTqAhXBA2MBHa9fBZMQ8gEwAHoECAwQAQ" target="_blank" class="contact__adress--link">15, rue du Pont Saint Marcel F-57000 Metz</a></p>
+				<a href="https://www.google.com/maps/place/15+Rue+du+Pont+Saint-Marcel,+57000+Metz/data=!4m2!3m1!1s0x4794deaa2ce6dbb3:0xc3a395a631b7eec7?sa=X&ved=2ahUKEwjQjZ7H2NTqAhXBA2MBHa9fBZMQ8gEwAHoECAwQAQ" target="_blank" class="contact__adress--link">Metz, France</a></p>
 				<p id="contact__website">Site web:<br />
-				<a href="http://sebaldpauer.com/" class="contact__website--link">sebaldpauer.com</a></p>
+				<a href="http://sebaldpauer.com/" target="_blank" class="contact__website--link">sebaldpauer.com</a></p>
 				<p id="contact__skype">Skype:<br />live:pauer.sebald</p>
 			</div>
 		</footer>
