--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<div id="name">
 			<h1><span class="name--green">Sebald</span><span class="name--grey"> Pauer</span></h1>
 			<h3 class="name__subtitle">Développeur web junior</h3>
+			<div></div>
 		</div>
 		<aside id="description">
 			<div class="title_aside">
@@ -110,7 +111,7 @@
 					<p>2014 – 2015<br />Besançon</p>
 				</div>
 				<div class="event">
-					<p><span class="event--place">Lycée Saint Jean</span><br /><span class="event--workplace">Classe préparatoire, section Art et architecture</span></p>
+					<p><span class="event--place">Lycée Saint Jean</span><br /><span class="event--workplace"></span>Classe préparatoire, section Art et architecture</span></p>
 				</div>
 				<div class="date">
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
@@ -119,7 +120,7 @@
 					<p>2013 – 2014<br />Saarbrücken, Allemagne</p>
 				</div>
 				<div class="event">
-					<p><span class="event--place">Abibac (Baccalauréat franco-allemand)</span><br /><span class="event--workplace"></span>Section Scientifique MP (option art) avec mention</span><br />DFG Saarbrücken</p>
+					<p><span class="event--place">Abibac (Baccalauréat franco-allemand)</span><br /><span class="event--workplace">Section Scientifique MP (option art) avec mention</span><br />DFG Saarbrücken</p>
 				</div>
 				<div class="date">
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
@@ -207,7 +208,7 @@
 					<p>07/2017 – 09/2017<br />Woippy</p>
 				</div>
 				<div class="event">
-					<p><span class="event--place">Mirabelle TV</span><br /><span class="event--workplace">Directeur artistique et designer graphique</span><br />Habillage graphique et multimédia de la chaine (huitième saison),
+					<p><span class="event--place">Mirabelle TV</span><br /><span class="event--workplace">Directeur artistique et motion/graphic designer</span><br />Habillage graphique et multimédia de la chaine (huitième saison),
 						programmation des animations sur Adobe After Effects.</p>
 				</div>
 				<div class="date">
@@ -237,7 +238,7 @@
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
 						<circle cx="2.7" cy="2.7" r="1.7"/>
 					</svg>
-					<p>05/2010<br />Uhingen, Deutschland</p>
+					<p>05/2010<br />Uhingen, Allemagne</p>
 				</div>
 				<div class="event">
 					<p><span class="event--place">Allgaier GmbH</span><br /><span class="event--workplace">Stagiaire polyvalent</span><br />Stage d’un mois en entreprise automobile.</p>
@@ -259,12 +260,9 @@
 				<h2 id="recommandations_title">Recommandations</h2>
 			</div>
 			<div class="containerB">
-				<div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus eos ab commodi consequatur
-					nesciunt sit necessitatibus accusamus magni! Quis inventore provident, fugit voluptatum dolor velit
-					accusantium ipsa ducimus fugiat molestias.</div>
-				<div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, incidunt veritatis facilis ullam
-					nobis consequatur dolores at provident. Voluptatum natus est obcaecati repudiandae eius beatae
-					veritatis quasi facilis, necessitatibus libero?</div>
+				<p><span class="recommandation--name">Didier Bailleux</span><br /><span class="recommandation--informations">Directeur, viàMoselleTV (Mirabelle TV)<br />Téléphone: +33 (0)9.77.77.31.31<br />E-Mail:<a href="mailto:dbailleux@mirabelle.tv" class="contact__mail--link">dbailleux@mirabelle.tv</a></span></p>
+				<p><span class="recommandation--name">Alex Szyjan</span><br /><span class="recommandation--informations">Motion Designer, viàMoselleTV (Mirabelle TV)<br />Téléphone: +33 (0)9.77.77.31.31<br />E-Mail:<a href="mailto:aszyjan@mirabelle.tv" class="contact__mail--link">aszyjan@mirabelle.tv</a></span></p>
+				<p><span class="recommandation--name">Frederic Rose</span><br /><span class="recommandation--informations">Gérant, Lézard Graphique<br />Téléphone: +33 (0)3.88.59.37.00<br />E-Mail:<a href="mailto:lezard-graphique@wanadoo.fr" class="contact__mail--link">lezard-graphique@wanadoo.fr</a></span></p>
 			</div>
 		</section>
 		<aside id="hobbies">
@@ -378,12 +376,12 @@
 				<h2>Contact</h2>
 			</div>
 			<div class="title_aside_text">
+				<p id="contact__adress">Adresse:<br />
+				<a href="https://www.google.com/maps/place/15+Rue+du+Pont+Saint-Marcel,+57000+Metz/data=!4m2!3m1!1s0x4794deaa2ce6dbb3:0xc3a395a631b7eec7?sa=X&ved=2ahUKEwjQjZ7H2NTqAhXBA2MBHa9fBZMQ8gEwAHoECAwQAQ" target="_blank" class="contact__adress--link">Metz, France</a></p>
 				<p>Téléphone:<br />
-					+33 (0)7.82.78.20.18</p>
+				+33 (0)7.82.78.20.18</p>
 				<p id="contact__mail">E-Mail:<br />
 					<a href="mailto:pauer.sebald@gmail.com" class="contact__mail--link">pauer.sebald@gmail.com</a></p>
-				<p id="contact__adress">Adresse postale:<br />
-				<a href="https://www.google.com/maps/place/15+Rue+du+Pont+Saint-Marcel,+57000+Metz/data=!4m2!3m1!1s0x4794deaa2ce6dbb3:0xc3a395a631b7eec7?sa=X&ved=2ahUKEwjQjZ7H2NTqAhXBA2MBHa9fBZMQ8gEwAHoECAwQAQ" target="_blank" class="contact__adress--link">Metz, France</a></p>
 				<p id="contact__website">Site web:<br />
 				<a href="http://sebaldpauer.com/" target="_blank" class="contact__website--link">sebaldpauer.com</a></p>
 				<p id="contact__skype">Skype:<br />live:pauer.sebald</p>
