--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div id="name">
 			<h1><span class="name--green">Sebald</span><span class="name--grey"> Pauer</span></h1>
-			<h3 class="name__subtitle">Développeur web junior</h3>
+			<h3 class="name__subtitle">Designer graphique, Développeur web freelance</h3>
 			<div></div>
 		</div>
 		<aside id="description">
@@ -33,14 +33,11 @@
 				<h2>à propos de moi</h2>
 			</div>
 			<div class="title_aside_text">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis aliquid commodi laborum impedit dolor
-					voluptatibus voluptatem fugit iste. Facere dolorem nisi dignissimos, fuga dolor, quibusdam, magnam ullam
-					aliquam provident nam qui sint quis quidem. Dolorum rerum recusandae nam fugit similique sunt modi
-					maiores dolorem ipsa, ipsum repudiandae neque dolor quae eos doloribus fuga voluptatum iusto dicta
-					consequuntur vero. Aperiam est magni, ex, animi quidem architecto pariatur quibusdam sed esse voluptatem
-					quasi deserunt modi similique deleniti molestias sequi ab nesciunt minima quis commodi nulla
-					exercitationem, maxime doloremque facere! Laborum ad aperiam quis minus, qui quo adipisci quod, quia,
-					itaque totam earum?</p>
+				<p>Agé de 25 ans, enfant de la campagne alsacienne, Sebald est un créateur de contenus graphiques et narratifs qui s'est recentré sur les supports numériques interractifs et partagés, notamment
+					 dans la conception de site web. Après une scolarité en Allemagne en tant que transfrontalier et un long cursus au sein des Beaux-Arts de Metz, cet individu s'est lancé à son compte afin de réaliser ses propres projets
+					 de narration: fortement marqué par l'hyperconsommation de l'information, il cherche à concevoir davantage d'expériences nouvelles pour ses clients/lecteurs au lieu de donner banalement des informations ou de raconter, sans entrain, une histoire. 
+					 De nature curieux, il s'aventure quotidiennement afin de trouver de nouveaux moyens de rendre compte des champs possibles qui rend visible une réalité extérieure riche où les limites de celle-ci s'étendent indéfiniment.
+				</p>
 			</div>
 		</aside>
 		<section id="formation">
