--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html lang="fr">
 
 <head>
@@ -7,8 +9,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
-	<link rel="stylesheet" type="text/css" media="handheld" href="css/smallscreen.css">
-	<link rel="stylesheet" type="text/css" media="handheld" href="css/smallscreen--style.css" />
+	<link rel="stylesheet" type="text/css" media="screen and (max-device-width: 480px)" href="css/smallscreen.css">
+	<link rel="stylesheet" type="text/css" media="screen and (max-device-width: 480px)" href="css/smallscreen--style.css" />
 	<link rel="stylesheet" type="text/css" media="print" href="css/print.css">
 	<meta property="og:title" content="CurryV - Sebald Pauer" />
 	<meta property="og:type" content="Curriculum Vitae" />
@@ -21,7 +23,7 @@
 <body>
 	<div class="wrapper">
 		<div id="pic">
-			<a href="images/id_grandformat.jpg"><img src="images/id_petitformat.jpg" class="pic__element"></a>
+			<a href="images/id_grandformat.jpg"><img src="images/id_petitformat.jpg" alt="Photo d'identité" class="pic__element"></a>
 		</div>
 		<div id="name">
 			<h1><span class="name--green">Sebald</span><span class="name--grey"> Pauer</span></h1>
@@ -71,7 +73,7 @@
 			<div class="containerA">
 				<div class="date">
 					<svg version="1.1" class="double_point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
-						<g id="double_point__element">
+						<g class="double_point__element">
 							<path d="M2.7,1.7c-0.5,0-0.9,0.4-0.9,0.9c0,0.5,0.4,0.9,0.9,0.9s0.9-0.4,0.9-0.9C3.6,2.2,3.2,1.7,2.7,1.7z"/>
 							<path d="M2.7,0C1.2,0,0,1.2,0,2.7c0,1.5,1.2,2.7,2.7,2.7c1.5,0,2.7-1.2,2.7-2.7C5.3,1.2,4.1,0,2.7,0z M2.7,4.6
 								c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9c1.1,0,1.9,0.9,1.9,1.9C4.6,3.7,3.7,4.6,2.7,4.6z"/>
@@ -108,7 +110,7 @@
 					<p>2014 – 2015<br />Besançon</p>
 				</div>
 				<div class="event">
-					<p><span class="event--place">Lycée Saint Jean</span><br /><span class="event--workplace"></span>Classe préparatoire, section Art et architecture</span></p>
+					<p><span class="event--place">Lycée Saint Jean</span><br /><span class="event--workplace">Classe préparatoire, section Art et architecture</span></p>
 				</div>
 				<div class="date">
 					<svg version="1.1" class="point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
@@ -158,7 +160,7 @@
 			<div class="containerA">
 				<div class="date">
 					<svg version="1.1" class="double_point" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 5.3 5.3" style="enable-background:new 0 0 5.3 5.3;" xml:space="preserve">
-						<g id="double_point__element">
+						<g class="double_point__element">
 							<path d="M2.7,1.7c-0.5,0-0.9,0.4-0.9,0.9c0,0.5,0.4,0.9,0.9,0.9s0.9-0.4,0.9-0.9C3.6,2.2,3.2,1.7,2.7,1.7z"/>
 							<path d="M2.7,0C1.2,0,0,1.2,0,2.7c0,1.5,1.2,2.7,2.7,2.7c1.5,0,2.7-1.2,2.7-2.7C5.3,1.2,4.1,0,2.7,0z M2.7,4.6
 								c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9c1.1,0,1.9,0.9,1.9,1.9C4.6,3.7,3.7,4.6,2.7,4.6z"/>
@@ -386,7 +388,7 @@
 		</footer>
 	</div>
 	<div id="fullscreen-video-bg">
-		<video src="video/Binary_numbers_alpha_overlay_01_Videvo.webm" autoplay="true" loop="true"></video>
+		<video src="video/Binary_numbers_alpha_overlay_01_Videvo.webm" preload="auto" autoplay loop>Cette animation ne démarre malheureusement pas. Excusez moi pour cette maladresse.</video>
 	</div>
 	<div id="fullscreen-video-bg--overlay"></div>
 </body>
