--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
-	<link rel="stylesheet" type="text/css" media="screen and (max-device-width: 480px)" href="css/smallscreen.css">
-	<link rel="stylesheet" type="text/css" media="screen and (max-device-width: 480px)" href="css/smallscreen--style.css" />
+	<link rel="stylesheet" type="text/css" media="screen and (max-width: 480px)" href="css/smallscreen.css">
+	<link rel="stylesheet" type="text/css" media="screen and (max-width: 480px)" href="css/smallscreen--style.css" />
 	<link rel="stylesheet" type="text/css" media="print" href="css/print.css">
 	<meta property="og:title" content="CurryV - Sebald Pauer" />
 	<meta property="og:type" content="Curriculum Vitae" />
