--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div>
 		<div id="name">
 			<h1><span class="name--green">Sebald</span><span class="name--grey"> Pauer</span></h1>
-			<h3 class="name__subtitle">Designer graphique, Développeur web freelance</h3>
+			<h3 class="name__subtitle">Designer graphique, Développeur web</h3>
 			<div></div>
 		</div>
 		<aside id="description">
@@ -35,10 +35,8 @@
 				<h2>à propos de moi</h2>
 			</div>
 			<div class="title_aside_text">
-				<p>Agé de 25 ans, enfant de la campagne alsacienne, Sebald est un créateur de contenus graphiques et narratifs qui s'est recentré sur les supports numériques interractifs et partagés, notamment
-					 dans la conception de site web. Après une scolarité en Allemagne en tant que transfrontalier et un long cursus au sein des Beaux-Arts de Metz, cet individu s'est lancé à son compte afin de réaliser ses propres projets
-					 de narration: fortement marqué par l'hyperconsommation de l'information, il cherche à concevoir davantage d'expériences nouvelles pour ses clients/lecteurs au lieu de donner banalement des informations ou de raconter, sans entrain, une histoire. 
-					 De nature curieux, il s'aventure quotidiennement afin de trouver de nouveaux moyens de rendre compte des champs possibles qui rend visible une réalité extérieure riche où les limites de celle-ci s'étendent indéfiniment.
+				<p>Agé de 26 ans, enfant de la campagne alsacienne, Sebald est un créateur de contenus graphiques et narratifs qui s'est recentré sur les supports numériques interractifs et évolutifs, notamment
+					 dans la conception d'application web. Après une scolarité en Allemagne en tant que transfrontalier et un long cursus au sein des Beaux-Arts de Metz, cet individu s'est engagé à réaliser, sur le long terme, ses propres projets à but utilitaire et/ou artistique.
 				</p>
 			</div>
 		</aside>
